Fix rating valign

--- a/src/definitions/modules/rating.less
+++ b/src/definitions/modules/rating.less
@@ -27,7 +27,6 @@
 
 .ui.rating {
   display: @display;
-  font-size: 0em;
   vertical-align: @verticalAlign;
 }
 .ui.rating:last-child {
@@ -47,14 +46,12 @@
   cursor: pointer;
 
   margin: 0em;
-  width: @iconHitbox;
-  text-align: center;
+  width: @iconWidth;
   height: auto;
+  text-align: center;
   padding: 0em;
-
   font-weight: normal;
   font-style: normal;
-  vertical-align: @verticalAlign;
 }
 
 
@@ -68,7 +65,7 @@
 
 /* Inactive */
 .ui.star.rating .icon {
-  width: @starIconHitbox;
+  width: @starIconWidth;
   color: @starInactiveColor;
 }
 
@@ -100,7 +97,7 @@
 --------------------*/
 
 .ui.heart.rating .icon {
-  width: @heartIconHitbox;
+  width: @heartIconWidth;
   color: @heartInactiveColor;
 }
 
@@ -190,12 +187,6 @@
   font-size: @massive;
 }
 
-/* Realign */
-.ui.large.rating,
-.ui.huge.rating,
-.ui.massive.rating {
-  vertical-align: @oversizedVerticalAlign;
-}
 
 .loadUIOverrides();
 
